--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "next": "12.0.1",
     "react": "17.x",
     "react-dom": "17.x"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8"
   }
 }
